packages/dart_edge_bluetooth_server/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:dart_edge_bluetooth_server/dart_edge_bluetooth_server.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>)>()
external int dart_edge_bluetooth_server_create(
  ffi.Pointer<ffi.Char> config_json,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_bluetooth_server_dispose(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_bluetooth_server_free_string(
  ffi.Pointer<ffi.Char> value,
);

@ffi.Native<ffi.Bool Function()>(isLeaf: true)
external bool dart_edge_bluetooth_server_is_supported_platform();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> dart_edge_bluetooth_server_issue_command(
  int handle,
  ffi.Pointer<ffi.Char> command_json,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_bluetooth_server_native_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int64)>()
external ffi.Pointer<ffi.Char> dart_edge_bluetooth_server_poll_event(
  int handle,
);

@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool dart_edge_bluetooth_server_start(int handle);

@ffi.Native<ffi.Bool Function(ffi.Int64)>()
external bool dart_edge_bluetooth_server_stop(int handle);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> dart_edge_bluetooth_server_take_last_error();
